# GPT-in-cpp

./: CMakeLists.txt  README.md
src/: main  main.cpp
